--- a/index.html
+++ b/index.html
@@ -2,37 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>T.K. Chang</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <title>T.K. Chang Selected Publications</title>
 </head>
 <body>
-
-<header>
-    <h1>T.K. Chang</h1>
-    <nav>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="journal.html">Journal</a>
-    </nav>
-</header>
-
-<main>
-    <h2>Welcome</h2>
-    <p>
-        This site is a modern continuation of a small corner of the early web —
-        once hosted on Angelfire, now reimagined with clarity and simplicity.
-    </p>
-
-    <p>
-        I’m an attorney, advisor, and observer of the subtle details that shape
-        both people and systems. This space gathers fragments of work, thought,
-        and ongoing projects.
-    </p>
-</main>
-
-<footer>
-    © 2026 T.K. Chang
-</footer>
-
+    <h1>T.K. Chang Selected Publications</h1>
+    <ul>
+        <li><a href="china_retail_2020.pdf">China Retail and E-Commerce in 2020</a></li>
+        <li><a href="no_moral_hazard.pdf">No Moral Hazard in China (Wall Street Journal)</a></li>
+        <li><a href="not_too_big_to_fail.pdf">Not Too Big to Fail in China (International Financial Law Review)</a></li>
+        <li><a href="shenzhen_shekou_1982_photos.pdf">1982 Photos of Shenzhen Special Economic Zone (Shekou)</a></li>
+        <li><a href="chinese_bankruptcy_law.pdf">Chinese Bankruptcy Law: Study in Legislative Process (Harvard International Law Journal)</a></li>
+        <li><a href="china_wild_east.pdf">China the Wild East (International New York Times)</a></li>
+        <li><a href="shenzhen_case_studies.html">Shenzhen Special Economic Zone 1982 First-hand Case Studies (深圳经济特区1982年第一手案例研究)</a></li>
+        <li><a href="life_after_fatca.pdf">No More Places to Hide Your Money (Life After FATCA) 美国税收新动向</a></li>
+    </ul>
 </body>
 </html>
